--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.3.4",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -21,7 +22,13 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-materialize": "^15.1.8",
+    "angularfire2": "^4.0.0-rc.2",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "firebase": "^4.2.0",
+    "hammerjs": "^2.0.8",
+    "materialize-css": "^0.100.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
